--- a/Software/Android/app/src/main/res/layout/activity_settings.xml
+++ b/Software/Android/app/src/main/res/layout/activity_settings.xml
@@ -6,51 +6,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <Button
-            android:id="@+id/btn_back_to_zero"
+            android:id="@+id/btn_servo_cfg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="舵机角度设置"
             android:textSize="25dp"
-            android:text="回原点"
             ></Button>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignTop="@+id/btn_back_to_zero"
-            android:layout_marginTop="50dp">
-            <TextView
-                android:id="@+id/turn_angle_text"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="转动角度"
-                android:textSize="25dp"
-                android:paddingVertical="8dp"
-                android:textAlignment="center"
-                ></TextView>
-            <NumberPicker
-                android:id="@+id/np_angle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                ></NumberPicker>
-            <Button
-                android:id="@+id/btn_turn_angle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="确定"
-                android:textSize="25dp"
-                ></Button>
-            <Button
-                android:id="@+id/btn_save_turn_angle"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="保存"
-                android:textSize="25dp"
-                ></Button>
-        </LinearLayout>
 
+
+        <Button
+            android:id="@+id/btn_server_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="服务器配置"
+            android:textSize="25dp"
+            ></Button>
 
     </RelativeLayout>
 
