--- a/Software/Android/app/src/main/res/layout/activity_tools.xml
+++ b/Software/Android/app/src/main/res/layout/activity_tools.xml
@@ -2,8 +2,10 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/text"
+    <Button
+        android:id="@+id/btn_mouse"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="鼠标"
+        ></Button>
 </RelativeLayout>
