--- a/Software/Android/app/src/main/res/layout/activity_mouse.xml
+++ b/Software/Android/app/src/main/res/layout/activity_mouse.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-
         <TextView
             android:id="@+id/text2"
             android:layout_width="0dp"
@@ -26,6 +25,18 @@
             android:layout_weight="1"
             android:text="0"></TextView>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <EditText
+            android:id="@+id/et_keyboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="键入字符"
+            ></EditText>
     </LinearLayout>
 
     <View
