--- a/Software/Android/app/src/main/res/layout/activity_main.xml
+++ b/Software/Android/app/src/main/res/layout/activity_main.xml
@@ -254,7 +254,12 @@
         android:layout_marginRight="50dp"
         android:background="@color/light_blue"
         ></Button>
-
+    <Button
+        android:id="@+id/btn_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        ></Button>
 
     <Button
         android:id="@+id/btn_settings"
