20240528 Android:添加esptouch配网功能

--- a/Software/Android/app/src/main/res/layout/activity_tools.xml
+++ b/Software/Android/app/src/main/res/layout/activity_tools.xml
@@ -16,4 +16,11 @@
         android:layout_toRightOf="@+id/btn_mouse"
         android:text="键盘"
         ></Button>
+
+    <EditText
+        android:id="@+id/et_test"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        ></EditText>
 </RelativeLayout>
