--- a/Software/Android/app/src/main/res/layout/activity_settings.xml
+++ b/Software/Android/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,14 @@
             android:textSize="25dp"
             ></Button>
 
+        <Button
+            android:id="@+id/btn_smart_cfg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="配网"
+            android:textSize="25dp"
+            ></Button>
+
     </RelativeLayout>
 
 
