20240610 Android: 1.添加JSON格式发送与解析; ESP32: 1.添加JSON格式发送与解析;

--- a/Software/Android/app/src/main/res/layout/activity_main.xml
+++ b/Software/Android/app/src/main/res/layout/activity_main.xml
@@ -207,6 +207,7 @@
                 android:id="@+id/radio_no_exe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="不执行"
                 android:textSize="20dp"
                 android:layout_marginLeft="50dp"
@@ -215,6 +216,7 @@
                 android:id="@+id/radio_power_on"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="下次上线立即开机"
                 android:textSize="20dp"
                 android:layout_marginLeft="50dp"
@@ -223,6 +225,7 @@
                 android:id="@+id/radio_power_off"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="立即关机"
                 android:textSize="20dp"
                 android:layout_marginLeft="50dp"
