--- a/Software/Android/app/src/main/res/layout/activity_tools.xml
+++ b/Software/Android/app/src/main/res/layout/activity_tools.xml
@@ -41,4 +41,13 @@
         android:text="上传文本"
         ></Button>
 
+    <Button
+        android:id="@+id/tools_btn_upload_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/tools_btn_upload"
+        android:layout_marginTop="50dp"
+        android:text="上传文件"
+        ></Button>
+
 </RelativeLayout>
