20240901 添加wifi设置功能

--- a/Software/QT-rebuid/Sparrow/mainwindow.ui
+++ b/Software/QT-rebuid/Sparrow/mainwindow.ui
@@ -21,7 +21,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -55,6 +55,22 @@
        <attribute name="title">
         <string>设置</string>
        </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QPushButton" name="btnSetWifi">
+          <property name="text">
+           <string>wifi设置</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_3">
+          <property name="text">
+           <string>  服务器设置</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="widget">
        <attribute name="title">
