20240910 实现http解析json数据

--- a/Software/QT-rebuid/Sparrow/dialog_wifi_cfg.ui
+++ b/Software/QT-rebuid/Sparrow/dialog_wifi_cfg.ui
@@ -11,19 +11,12 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>WIFI设置</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QWidget" name="widget" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>wifi设置</string>
-        </property>
-       </widget>
-      </item>
       <item>
        <widget class="QWidget" name="widget_2" native="true">
         <layout class="QHBoxLayout" name="horizontalLayout">
