--- a/Project/Android/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/Android/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.sparrow.ui.gallery.GalleryFragment"
+        android:name="com.example.sparrow.ui.settings.SettingsFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.sparrow.ui.slideshow.SlideshowFragment"
+        android:name="com.example.sparrow.ui.tools.ToolsFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_tools" />
 </navigation>
