--- a/Project/Android/app/src/main/res/layout/fragment_home.xml
+++ b/Project/Android/app/src/main/res/layout/fragment_home.xml
@@ -34,25 +34,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
-
             <TextView
+                android:id="@+id/tv_device_state"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="开机时间"
+                android:text="设备状态"
                 android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                />
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                ></TextView>
+
             <Button
                 android:id="@+id/btn_power_on"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text = "开机"
                 android:textSize="20sp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="100dp"
+                android:layout_toLeftOf="@+id/btn_power_off"
+                android:layout_marginRight="10dp"
                 />
             <Button
-                android:id="@+id/btn_bower_off"
+                android:id="@+id/btn_power_off"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text = "关机"
@@ -68,81 +70,22 @@
             android:orientation="horizontal"
             >
             <TextView
-                android:id="@+id/tv_month"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="xx"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="开机时间"
                 android:textSize="20sp"
-                android:layout_weight="1"
                 />
 
             <TextView
+                android:id="@+id/next_power_on_time"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="月"
+                android:layout_height="match_parent"
+                android:text=""
                 android:textSize="20sp"
+                android:layout_marginLeft="30dp"
                 android:layout_weight="1"
                 />
 
-            <TextView
-                android:id="@+id/tv_date"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="xx"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="日 "
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:id="@+id/tv_hour"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="xx"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text=":"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:id="@+id/tv_minute"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="xx"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text=":"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
-
-            <TextView
-                android:id="@+id/tv_second"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="xx"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                />
         </LinearLayout>
     </LinearLayout>
 
@@ -176,6 +119,7 @@
                 ></TextView>
 
             <Button
+                android:id="@+id/btn_save_wakeup_interval"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="保存"
@@ -242,6 +186,7 @@
         android:layout_marginTop="10dp"
         >
         <CheckBox
+            android:id="@+id/cb_pc_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="开机密码"
@@ -250,12 +195,14 @@
             ></CheckBox>
 
         <EditText
+            android:id="@+id/et_pc_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:password="true"
             ></EditText>
         <Button
+            android:id="@+id/btn_save_pc_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="保存"
@@ -283,6 +230,7 @@
                 android:textSize="20sp"
                 android:layout_weight="1"/>
             <Button
+                android:id="@+id/btn_upload_notification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="上传"
@@ -291,8 +239,10 @@
 
 
         <EditText
+            android:id="@+id/et_text"
             android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+            android:layout_height="50dp"
+            />
 
         <Button
             android:id="@+id/btn_upload_file"
