--- a/Project/Android/app/src/main/res/layout/activity_server_cfg.xml
+++ b/Project/Android/app/src/main/res/layout/activity_server_cfg.xml
@@ -21,8 +21,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="地址"
-                android:textSize="25dp"
-                android:textAlignment="center">
+                android:textSize="25sp"
+                android:textAlignment="center"
+                android:layout_gravity="center">
             </TextView>
             <EditText
                 android:id="@+id/mqtt_addr"
@@ -45,8 +46,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="用户名"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAlignment="center"
+                android:layout_gravity="center"
                 ></TextView>
             <EditText
                 android:id="@+id/username"
@@ -68,8 +70,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="密码"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAlignment="center"
+                android:layout_gravity="center"
                 ></TextView>
             <EditText
                 android:id="@+id/password"
@@ -104,6 +107,66 @@
                 ></Button>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="bilibilivmid"
+                android:textSize="25sp"
+                android:layout_gravity="center"/>
+
+            <EditText
+                android:id="@+id/et_bilibili_vmid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"/>
+
+            <Button
+                android:id="@+id/btn_save_bilibili_vmid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="保存"
+                android:layout_gravity="center"
+                ></Button>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="天气秘钥"
+                android:textSize="25sp"
+                android:layout_gravity="center"/>
+
+            <EditText
+                android:id="@+id/et_weather_key"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"/>
+
+            <Button
+                android:id="@+id/btn_save_weather_key"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="保存"
+                android:layout_gravity="center"
+                ></Button>
+
+        </LinearLayout>
+
     </LinearLayout>
+
+
 
 </LinearLayout>
