--- a/Project/Android/app/src/main/res/layout/activity_settings.xml
+++ b/Project/Android/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
             android:id="@+id/btn_server_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="服务器配置"
+            android:text="MQTT服务器"
             android:textSize="25dp"
             ></Button>
 
@@ -28,7 +28,7 @@
             android:id="@+id/btn_smart_cfg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="配网"
+            android:text="自动配网"
             android:textSize="25dp"
             ></Button>
 
