--- a/Software/QT-rebuid/Sparrow/mainwindow.ui
+++ b/Software/QT-rebuid/Sparrow/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>258</width>
-    <height>400</height>
+    <width>218</width>
+    <height>385</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>218</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -17,30 +23,18 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget">
+      <property name="maximumSize">
+       <size>
+        <width>200</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="tabPosition">
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
-      <widget class="QWidget" name="tab">
-       <attribute name="title">
-        <string>Tab 1</string>
-       </attribute>
-       <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-         <rect>
-          <x>50</x>
-          <y>30</y>
-          <width>80</width>
-          <height>20</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>PushButton</string>
-        </property>
-       </widget>
-      </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
         <string>文本接收</string>
@@ -48,8 +42,14 @@
        <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
          <widget class="QTextEdit" name="teRecText">
+          <property name="maximumSize">
+           <size>
+            <width>200</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="readOnly">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -120,18 +120,18 @@
             <height>100</height>
            </size>
           </property>
-          <layout class="QFormLayout" name="formLayout">
-           <item row="0" column="1">
+          <layout class="QVBoxLayout" name="verticalLayout_5">
+           <item>
             <widget class="QCheckBox" name="checkBox">
              <property name="text">
-              <string> 睡眠功能</string>
+              <string>睡眠功能</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
+           <item>
             <widget class="QCheckBox" name="cbPCMonitor">
              <property name="text">
-              <string>   电脑监控</string>
+              <string>电脑监控</string>
              </property>
             </widget>
            </item>
