--- a/Project/Android/app/src/main/res/layout/dialog_password_delay.xml
+++ b/Project/Android/app/src/main/res/layout/dialog_password_delay.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal"
         >
         <TextView
@@ -18,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="延迟时间(s)"
             android:textSize="25dp"
             android:paddingVertical="55dp"
@@ -28,7 +30,7 @@
             android:id="@+id/np_password_delay"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="3"
             ></NumberPicker>
 
     </LinearLayout>
