--- a/Project/Android/app/src/main/res/layout/activity_main.xml
+++ b/Project/Android/app/src/main/res/layout/activity_main.xml
@@ -171,35 +171,72 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        >
+        android:layout_marginRight="10dp">
         <TextView
-            android:id="@+id/cb_pc_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="开机密码"
-            android:layout_weight="1"
-            android:textSize="25sp"
-            ></TextView>
-
-        <EditText
-            android:id="@+id/et_pc_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:password="true"
-            ></EditText>
-        <Button
-            android:id="@+id/btn_save_pc_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="保存"
-            android:textSize="20sp"
-            ></Button>
+            android:text="开机计划"
+            android:textSize="20sp"/>
+        <TimePicker
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:timePickerMode="spinner"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="周一"
+                />
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="周二"
+                />
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="周三"
+                />
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="周四"
+                />
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="周五"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="周六"
+                />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="周日"
+                />
+        </LinearLayout>
     </LinearLayout>
-    
 
 </LinearLayout>
